--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cxy-tools",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "main": "dist/tools.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -16,13 +16,13 @@
     "types"
   ],
   "dependencies": {
+  },
+  "devDependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
-    "vue": "^2.6.14"
-  },
-  "devDependencies": {
+    "vue": "^2.6.14",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
