--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
   ],
   "dependencies": {
     "dayjs": "^1.11.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
-    "core-js": "^3.8.3",
-    "element-ui": "^2.15.9",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
-    "vue": "^2.6.14",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "core-js": "^3.8.3",
+    "element-ui": "^2.15.9",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
+    "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
